update: added an example of how a page will look like

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,14 +1,29 @@
-
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link href="../../shared/style/font.css" rel="stylesheet"> -->
   <link href="../../shared/style/main.css" rel="stylesheet">
+  <link href="./index.windi.css" rel="stylesheet">
+  <style lang="windi">
+
+    section {
+      @apply flex justify-center items-center;
+    }
+
+    .testSeciton {
+      @apply border-solid border-1rem border-b-900;
+    }
+  </style>
 </head>
+
 <body>
-  <h1 class="tt">
-    Hello world!
-  </h1>
+  <section class="bg-0 w-100wh h-100vh">
+    <h1 class="header1 testSeciton">تجربه</h1>
+  </section>
+
 </body>
+
 </html>
