--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,9 +8,11 @@
   <link href="../../shared/style/main.css" rel="stylesheet">
   <link href="./index.windi.css" rel="stylesheet">
   <style lang="windi">
-
+    body {
+      @apply overflow-y-hidden;
+    }
     section {
-      @apply flex justify-center items-center;
+      @apply flex justify-center items-center ;
     }
 
     .testSeciton {
@@ -19,11 +21,25 @@
   </style>
 </head>
 
-<body>
+<body >
+  <div id="fullPage">
   <section class="bg-0 w-100wh h-100vh">
     <h1 class="header1 testSeciton">تجربه</h1>
   </section>
-
+  <section class="bg-0 w-100wh h-100vh">
+    <h1 class="header1 testSeciton">تجربه</h1>
+  </section>
+  <section class="bg-0 w-100wh h-100vh">
+    <h1 class="header1 testSeciton">تجربه</h1>
+  </section>
+ 
+</div>
 </body>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="../../shared/js/jquery.fullpage.js"></script>
+<script>
+          $('#fullPage').fullpage();
+
+</script>
 </html>
