--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,31 +5,95 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link href="../../shared/style/font.css" rel="stylesheet"> -->
+
+  <link rel="preconnect" href="../../shared/style/fonts.css">
   <link href="../../shared/style/main.css" rel="stylesheet">
   <link href="./index.windi.css" rel="stylesheet">
   <style lang="windi">
+    html {
+      @apply text-[67%]
+    }
     body {
       @apply overflow-y-hidden;
     }
     section {
-      @apply flex justify-center items-center ;
+      @apply flex flex-col   ;
     }
-
+    h2 {
+      font-size: clamp(2rem, 20vw, 4.5rem);
+    }
     .testSeciton {
       @apply border-solid border-1rem border-b-900;
     }
+
+    .wrapper {
+      @apply max-w-[1000px] mx-auto w-full;
+      @apply  sm:(max-w-[90%])
+    }
+    .header {
+      @apply flex gap-2rem font-f1 mt-2rem items-center;
+      & .logo {
+        @apply w-200px h-80px bg-gray-500;
+      }
+      & span {
+        @apply mx-20px;
+      }
+      & a {
+        @apply text-2.6rem
+      }
+    
+    }
+    .conent_card {
+        @apply bg-white border-solid border-3px rounded-3xl p-2rem pt-3rem text-center;
+        @apply flex flex-col gap-1rem;
+        
+        & div {
+          @apply font-f0 text-2.4rem;
+        }
+        & h3 {
+          @apply font-f0 text-4.8rem my-0;
+        }
+        & p {
+          @apply font-f0 text-2.4rem text-center leading-3rem; 
+        }
+      }
+      .btn {
+        @apply py-12px px-40px bg-w-500 border-solid border-4px text-2.4rem leading-3rem;
+      }
   </style>
 </head>
 
 <body >
-  <div id="fullPage">
-  <section class="bg-0 w-100wh h-100vh">
+  <div id="fullPage" class="bg-0">
+   
+  <section class=" w-100wh h-100vh">
+    <div class="wrapper">
+      <nav class="header">
+        <div class="logo"></div> <span></span> <a>Link 1</a><a>Link 2</a><a>Link 3</a>
+      </nav>
+    </div>
+    <h2 class="text-center font-f0 mt-14rem sm:mt-6rem"> 30 يوم : 24 ساعة : 3 دقائق</h2>
+    <div class="wrapper">
+
+      <div class="conent_card">
+        <div>
+          ما هو "لوريم إيبسوم" ؟
+        </div>
+        <h3>ما هو "لوريم إيبسوم" ؟
+        </h3>
+        <p>
+          هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) ويُستخدم في صناعات المطابع ودور النشر. كان لوريم إيبسوم ولايزال المعيار للنص الشكلي منذ القرن الخامس عشر عندما قامت مطبعة مجهولة 
+        </p>
+        <div class="flex justify-center">
+          <a class="btn">تسجل</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class=" w-100wh h-100vh">
     <h1 class="header1 testSeciton">تجربه</h1>
   </section>
-  <section class="bg-0 w-100wh h-100vh">
-    <h1 class="header1 testSeciton">تجربه</h1>
-  </section>
-  <section class="bg-0 w-100wh h-100vh">
+  <section class=" w-100wh h-100vh">
     <h1 class="header1 testSeciton">تجربه</h1>
   </section>
  
