pause: stop at prizes seciton

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -82,6 +82,8 @@
           }
         } 
       }
+
+     
   </style>
 </head>
 
@@ -146,9 +148,17 @@
 
    </div>
   </section>
-  <section class=" w-100vw h-100vh">
-    <h1 class="header1 testSeciton">تجربه</h1>
-  </section>
+  <!-- <section class=" w-100vw h-100vh">
+    <header>
+      الجوائز     
+    </header>  
+  
+    <div class="">
+
+    
+    </div>
+
+  </section> -->
  
 </div>
 </body>
