update: added style to wrapper class

--- a/shared/components/utiltes.html
+++ b/shared/components/utiltes.html
@@ -11,6 +11,14 @@
         html {
             @apply m-0 p-0;
         }
+        html {
+            @apply text-[67%]
+        }
+        .wrapper {
+      @apply max-w-[1280px] mx-auto w-full;
+      @apply  sm:(max-w-[90%])
+    }
+        
     </style>
 </head>
 <body >
