--- a/shared/components/button.html
+++ b/shared/components/button.html
@@ -4,6 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../style/main.css" rel="stylesheet">
+        <style lang="windi">
+            .btn {
+                @apply w-auto px-5 py-3 font-f2;
+                &.style{
+                    &.one {
+                        @apply flex items-center justify-center;
+                        @apply text-white  text-[2rem] font-bold;
+                        @apply border-solid border-white border-[2px] rounded-xl shadow-btn bg-bg-2;
+                    }
+                }
+            }  
+        </style>
 
     </head>
 
