--- a/shared/components/navbar.html
+++ b/shared/components/navbar.html
@@ -9,22 +9,26 @@
     <title>Document</title>
     <style lang="windi">
         .wrapper {
-            @apply relative
+            @apply sticky top-[30px] z-50;
+            @screen sm {
+                @apply hidden;
+            }
         }
         nav {
             @apply absolute top-[37px] left-0 right-0;
             @apply w-full border-solid border-[1px] rounded-full border-white h-[60px];
             @apply flex flex justify-between items-center; 
+            @apply w-full;
             & ul  {
                 @apply flex gap-[40px] list-none;
                 @apply font-f2 font-bold text-white text-[1.6rem] cursor-pointer;
                 & li.active {
                     @apply text-co1;
                     
-                   &::after {
+                   /* &::after {
                     @apply content-[''] block w-[6.33px] h-[2.33px] bg-white mt-2 transition-all duration-600;
               
-                   }
+                   } */
                 }
                 & li.active:hover {
                     &::after{
