--- a/shared/components/utiltes.html
+++ b/shared/components/utiltes.html
@@ -14,11 +14,27 @@
         html {
             @apply text-[67%]
         }
+    body  {
+        @apply absolute top-0 right-0 left-0 bottom-0 overflow-x-hidden;
+    }
+        main {
+            @apply  pb-20;
+        }
         .wrapper {
       @apply max-w-[1280px] mx-auto w-full;
       @apply  sm:(max-w-[90%])
     }
-        
+      h1,h2,h3,h4,h5,h6 {
+            @apply font-f2 font-bold text-white;
+        }
+        h2 {
+            @apply text-[2.9rem]
+        }
+
+
+        section {
+            @apply w-[100%] h-[100%] overflow-hidden py-20;
+        }
     </style>
 </head>
 <body >
