--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,14 +7,8 @@
   <link rel="preconnect" href="/shared/style/fonts.css">
   <link href="../../shared/style/main.css" rel="stylesheet">
   <link href="./index.windi.css" rel="stylesheet">
-  <link href="/shared/style/fonts.css">
+  <link href="../../shared/style/fonts.css">
   <style lang="windi">
-    .bg_light {
-      @apply absolute  rounded-full bg-white w-[881px] h-[881px] opacity-60;
-      filter: blur(200px);
-      transform: translate3d(-145vh,40vh,0);
-  
-    }
 
   </style>
 </head>
@@ -54,10 +48,10 @@
  
 </main>
 </body>
-<script src="/shared/js/navbar.js"></script>
-<script src="/shared/js/heroBanner.js"></script>
-<script src="/shared/js/tracks.js"></script>
-<script src="/shared/module/hero.js" type="module"></script>
+<script src="../../shared/js/navbar.js"></script>
+<script src="../../shared/js/heroBanner.js"></script>
+<script src="../../shared/js/tracks.js"></script>
+<script src="../../shared/module/hero.js" type="module"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 </html>
