--- a/shared/components/utiltes.html
+++ b/shared/components/utiltes.html
@@ -24,6 +24,9 @@
       @apply max-w-[1280px] mx-auto w-full;
       @apply  sm:(max-w-[90%])
     }
+    .wrapper2 {
+        @apply max-w-[90%]  mx-auto w-full;
+    }
       h1,h2,h3,h4,h5,h6 {
             @apply font-f2 font-bold text-white;
         }
@@ -33,7 +36,7 @@
 
 
         section {
-            @apply w-[100%] h-[100%] overflow-hidden py-20;
+            @apply w-[100%] h-[100%] overflow-hidden py-20 min-h-[832px];
         }
     </style>
 </head>
