--- a/src/app/index.html
+++ b/src/app/index.html
@@ -53,7 +53,7 @@
 <script src="../../shared/js/heroBanner.js"></script>
 <script src="../../shared/js/tracks.js"></script>
 <script src="../../shared/js/timeline.js"></script>
-<script src="../../shared/module/hero.js" type="module"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<!-- <script src="../../shared/module/hero.js" type="module"></script> -->
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
 
 </html>
