--- a/src/app/index.html
+++ b/src/app/index.html
@@ -14,7 +14,24 @@
 </head>
 
 <body dir="rtl">
-  <header class="wrapper" id="navbar"> </header>
+  <header class="wrapper" id="navbar"> 
+    <nav>
+      <div class="logo">
+          <picture>
+              <img src="../../shared/image/logo-white.png">
+          </picture>
+      </div>
+      <ul>
+          <li class="active"><a>الرئـيسية</a></li>
+          <li><a>المسارات</a></li>
+          <li><a>المزايا</a></li>
+          <li><a>الجوائز</a></li>
+      </ul>
+      <span>
+          <a>EN</a>
+      </span>
+  </nav>
+  </header>
 
   <main class="bg-bg-1">
 
@@ -22,7 +39,6 @@
   
     </section>
     <section id="about">
-      <img class="bg_track" src="../../shared/image/bg2.svg" >
       <div id="about_hackathon" class="wrapper">
         <h2>عن هاكاثون 
         </h2>
