--- a/shared/components/prizes.html
+++ b/shared/components/prizes.html
@@ -280,7 +280,14 @@
           width: 100%;
         }
       }
-      
+            
+      .h3-title-price{
+        background: linear-gradient(180deg, #91D8FF -3.61%, #847199 101.27%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: x-large !important;
+        text-align: center !important;
+              }
       
     
       
@@ -344,8 +351,8 @@
       <div class="card-info-wrapper">
         <div class="card-info">
           <div class="card-info-title">
-            <h3>Apartments</h3>  
-            <h4>Places to be apart. Wait, what?</h4>
+            <h3 class="h3-title-price">10,000</h3>  
+            <h4>سيؤدي الهيدروجين دوراً رئيسياً في الانتقال نحو الطاقة المتجددة، وإزالة الكربون من الاستخدامات النه</h4>
           </div>    
         </div>
       </div>
