update: style updated

--- a/shared/components/navbar.html
+++ b/shared/components/navbar.html
@@ -14,7 +14,7 @@
                 @apply hidden;
             }
         }
-        nav {
+        nav.navbar {
             @apply absolute top-[37px] left-0 right-0;
             @apply w-full border-solid border-[1px] rounded-full border-white h-[60px];
             @apply flex flex justify-between items-center; 
@@ -51,7 +51,7 @@
 </head>
 <body class="bg-bg-1">
     <header class="wrapper">
-        <nav>
+        <nav class="navbar">
             <div class="logo">
                 <picture>
                     <img src="../image/logo-white.png">
