--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,35 +9,24 @@
   <link href="./index.windi.css" rel="stylesheet">
   <link href="../../shared/style/fonts.css">
   <style lang="windi">
-
+    
   </style>
 </head>
 
 <body dir="rtl">
   <header class="wrapper" id="navbar"> 
-    <nav>
-      <div class="logo">
-          <picture>
-              <img src="../../shared/image/logo-white.png">
-          </picture>
-      </div>
-      <ul>
-          <li class="active"><a>الرئـيسية</a></li>
-          <li><a>المسارات</a></li>
-          <li><a>المزايا</a></li>
-          <li><a>الجوائز</a></li>
-      </ul>
-      <span>
-          <a>EN</a>
-      </span>
-  </nav>
+    
   </header>
 
   <main class="bg-bg-1">
 
-    <section id="heroBannar" class="wrapper">
-  
+    <section id="heroBannar" class="wrapper"> 
+
+      
     </section>
+    <picture id="axsonGif">
+      <img src="../../shared/image/Axongif.webp" >
+  </picture>
     <section id="about">
       <div id="about_hackathon" class="wrapper">
         <h2>عن هاكاثون 
@@ -48,20 +37,10 @@
       </div>
       <div class="wrapper" id="hackathon_tracks"></div>
     </section>
-    <section class="wrapper2" id="timeline">
-
-    </section>
-  <!-- <section class=" w-100vw h-100vh">
-    <header>
-      الجوائز     
-    </header>  
+    <section class="wrapper2" id="timeline"></section>
+    <div class="bg_3" id="prizes"> </div>
+    <footer id="footer"> </footer>
   
-    <div class="">
-
-    
-    </div>
-
-  </section> -->
  
 </main>
 </body>
@@ -69,6 +48,8 @@
 <script src="../../shared/js/heroBanner.js"></script>
 <script src="../../shared/js/tracks.js"></script>
 <script src="../../shared/js/timeline.js"></script>
+<script src="../../shared/js/prizes.js"></script>
+<script src="../../shared/js/footer.js"></script>
 <!-- <script src="../../shared/module/hero.js" type="module"></script> -->
 <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
 
