update: edit background image

--- a/shared/components/track-card.html
+++ b/shared/components/track-card.html
@@ -93,7 +93,7 @@
             }
          }
          .bg_track {
-      @apply absolute left-[-0vw] right-[-0vw] w-full  h-[100vh] top-[0];
+      @apply absolute left-[-0vw] right-[-0vw] w-full  h-[100vh] top-[-310px];
     }
     #about {
         @apply relative  flex flex-col items-center;
